Closed
Bug 2015318
Opened 3 months ago
Closed 3 months ago
fix final frame of jxl animation getting skipped
Categories
(Core :: Graphics: ImageLib, defect)
Core
Graphics: ImageLib
Tracking
()
RESOLVED
FIXED
149 Branch
| Tracking | Status | |
|---|---|---|
| firefox149 | --- | fixed |
People
(Reporter: tnikkel, Assigned: zondolfin)
References
(Blocks 1 open bug)
Details
Attachments
(1 file, 1 obsolete file)
Apply the patch adding gtests in bug 2015014 and then run the jxl gtests it adds to reproduce. One of the problems is that the two frame animated jxl image is decoded as a 1 frame image because the last frame doesn't get processed.
| Reporter | ||
Updated•3 months ago
|
Severity: -- → S3
| Assignee | ||
Comment 1•3 months ago
|
||
Updated•3 months ago
|
Assignee: nobody → zondolfin
Status: NEW → ASSIGNED
| Assignee | ||
Comment 2•3 months ago
|
||
Updated•3 months ago
|
Attachment #9543811 -
Attachment is obsolete: true
Pushed by tnikkel@mozilla.com:
https://github.com/mozilla-firefox/firefox/commit/46edacffdcc7
https://hg.mozilla.org/integration/autoland/rev/443f2554d1a1
Fix animated JXL decoding and test expectations. r=tnikkel,saschanaz
Comment 4•3 months ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 3 months ago
status-firefox149:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 149 Branch
Updated•2 months ago
|
QA Whiteboard: [qa-triage-done-c150/b149]
You need to log in
before you can comment on or make changes to this bug.
Description
•