Bug 2015318 - Fix animated JXL decoding and test expectations. r=tnikkel,saschanaz

Differential Revision: https://phabricator.services.mozilla.com/D282296